# lpic-langServer

./: .gitignore  Readme.md  pyproject.toml  runTests
lpicLangServer/langserver/: cli.py  ls1_lifeCycle.py
lpicLangServer/lpic/: actions.py  lpicActions.py
lpicLangServer/lpic/syntax/: lpic.tmLanguage.json
lpicLangServer/lpicCli/: cli.py
scripts/: installEditableLPiC-LangServerCommand  installEditableLPiCCommand  updateLocalContextLangServer  updateLocalLpicSyntaxes  updateLocalTmGrammars
src/actions/: lpicActions.mjs
tests/ansic-ninja/: build.ninja  download.ninja
tests/ansic-ninja/xeus-json/: Readme.md  jsonEchoKernelTest
tests/ansic-ninja/xeus-json/src/: jsonEcho.cpp
tests/ansic/xeus-json/share/jupyter/kernels/json_echo/: kernel.json
tests/ansic/xeus-json/src/: jsonEcho.hpp  main.cpp
tests/client/: Readme.md  buildScript.yaml  client  initScript.yaml
tests/lpic/: jeClass.tex  jeMain.tex  jsonEcho.tex
tests/python/: test_lpic_actions.py
